--- a/jupyter/missing_value_handler.ipynb
+++ b/jupyter/missing_value_handler.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -278,46 +278,103 @@
       " 5   Rating        30000 non-null  float64       \n",
       "dtypes: datetime64[ns](1), float64(1), int64(1), object(3)\n",
       "memory usage: 1.4+ MB\n",
-      "None\n",
-      "Title\n",
-      "Thing.                     10\n",
-      "Right.                      9\n",
-      "Room.                       8\n",
-      "Strategy.                   8\n",
-      "Fear.                       8\n",
-      "                           ..\n",
-      "Network place at.           1\n",
-      "Lawyer just.                1\n",
-      "Finish oil by practice.     1\n",
-      "Such employee true.         1\n",
-      "Shoulder above note.        1\n",
-      "Name: count, Length: 28216, dtype: int64\n",
-      "Director\n",
-      "James Smith          13\n",
-      "Christopher Smith    12\n",
-      "Lisa Smith           11\n",
-      "Michael Miller       10\n",
-      "Michael Smith        10\n",
-      "                     ..\n",
-      "Brett Fischer         1\n",
-      "Christian Todd        1\n",
-      "Jillian Long          1\n",
-      "Jennifer Mckinney     1\n",
-      "Cathy Edwards         1\n",
-      "Name: count, Length: 25844, dtype: int64\n",
-      "Genre\n",
-      "Fantasy        3047\n",
-      "Horror         3027\n",
-      "Sci-Fi         3019\n",
-      "Action         3019\n",
-      "Thriller       3014\n",
-      "Romance        2991\n",
-      "Adventure      2990\n",
-      "Drama          2982\n",
-      "Comedy         2969\n",
-      "Documentary    2942\n",
-      "Name: count, dtype: int64\n"
+      "None\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Release Date</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>30000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>2000-07-20 01:58:50.880000</td>\n",
+       "      <td>120.131033</td>\n",
+       "      <td>5.519867</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1980-01-01 00:00:00</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1990-04-19 00:00:00</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>3.300000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>2000-08-11 00:00:00</td>\n",
+       "      <td>120.000000</td>\n",
+       "      <td>5.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>2010-11-04 06:00:00</td>\n",
+       "      <td>150.000000</td>\n",
+       "      <td>7.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>2020-12-30 00:00:00</td>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>34.981221</td>\n",
+       "      <td>2.591138</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Release Date      Duration        Rating\n",
+       "count                       30000  30000.000000  30000.000000\n",
+       "mean   2000-07-20 01:58:50.880000    120.131033      5.519867\n",
+       "min           1980-01-01 00:00:00     60.000000      1.000000\n",
+       "25%           1990-04-19 00:00:00     90.000000      3.300000\n",
+       "50%           2000-08-11 00:00:00    120.000000      5.500000\n",
+       "75%           2010-11-04 06:00:00    150.000000      7.700000\n",
+       "max           2020-12-30 00:00:00    180.000000     10.000000\n",
+       "std                           NaN     34.981221      2.591138"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
